Hehe succesful to run

--- a/firstClass/firstClass/firstClass.vcxproj.filters
+++ b/firstClass/firstClass/firstClass.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Subject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Student.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Subject.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
