--- a/firstClass/firstClass/firstClass.vcxproj.filters
+++ b/firstClass/firstClass/firstClass.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Semester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Calculate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Subject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Semester.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Calculate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
